kubernetes/apps/envoy-gateway-system/envoy-gateway-system/gateway/gateway-external.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-external
  annotations:
    cert-manager.io/cluster-issuer: hetzner-dns01
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.mrtb.io"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.mrtb.io"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: mrtb-io-tls
    - name: http-dev
      protocol: HTTP
      port: 80
      hostname: "*.dev.mrtb.io"
      allowedRoutes:
        namespaces:
          from: All
    - name: https-dev
      protocol: HTTPS
      port: 443
      hostname: "*.dev.mrtb.io"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: dev-mrtb-io-tls
